Split java 8 confgiguration with new Java 21 configuration, not sure about graalvm